--- a/jobo/templates/jobo/index.html
+++ b/jobo/templates/jobo/index.html
@@ -1,57 +1,6 @@
 {% extends 'jobo/base.html' %}{% load static %} {% block content %}
 
-<!-- slider_area_start -->
-<div class="slider_area">
-  <div class="single_slider d-flex align-items-center slider_bg_1">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-7 col-md-6">
-          <div class="slider_text">
-            <h5
-              class="wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".2s"
-            >
-              {{ jobs.count }}+ Jobs listed
-            </h5>
-            <h3
-              class="wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".3s"
-            >
-              Find or List a job
-            </h3>
-            <p
-              class="wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".4s"
-            >
-              We provide a simple avenue to get a job or meet your prospective
-              employee
-            </p>
-            <div
-              class="sldier_btn wow fadeInLeft"
-              data-wow-duration="1s"
-              data-wow-delay=".5s"
-            >
-              <a href="{% url 'job_create' %}" class="boxed-btn3"
-                >post a service</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div
-    class="ilstration_img wow fadeInRight d-none d-lg-block text-right"
-    data-wow-duration="1s"
-    data-wow-delay=".2s"
-  >
-    <img src="{% static 'img/banner/illustration.png' %}" alt="" />
-  </div>
-</div>
-<!-- slider_area_end -->
+
 
 <!-- catagory_area -->
 <div class="catagory_area">
@@ -109,7 +58,7 @@
 <!--/ catagory_area -->
 
 <!-- popular_catagory_area_start  -->
-<div class="popular_catagory_area">
+{% comment %} <div class="popular_catagory_area">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -131,11 +80,11 @@
       {% endfor %}
     </div>
   </div>
-</div>
-<!-- popular_catagory_area_end  -->
+</div> {% endcomment %}
+A
 
 <!-- job_listing_area_start  -->
-<div class="job_listing_area">
+<div class="job_listing_area p-5">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6">
@@ -145,7 +94,7 @@
       </div>
       <div class="col-lg-6">
         <div class="brouse_job text-right">
-          <a href="{% url 'jobs' %}" class="boxed-btn4">Browse More Job</a>
+          <a href="{% url 'jobs' %}" class="btn  btn-PRIMAR">Browse More Job</a>
         </div>
       </div>
     </div>
@@ -275,85 +224,6 @@
 </div>
 <!-- job_searcing_wrap end  -->
 
-<!-- testimonial_area  -->
-<!-- <div class="testimonial_area  ">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section_title text-center mb-40">
-                    <h3>Testimonial</h3>
-                </div>
-            </div>
-            <div class="col-xl-12">
-                <div class="testmonial_active owl-carousel">
-                    <div class="single_carousel">
-                        <div class="row">
-                            <div class="col-lg-11">
-                                <div class="single_testmonial d-flex align-items-center">
-                                    <div class="thumb">
-                                        <img src="img/testmonial/author.png" alt="">
-                                        <div class="quote_icon">
-                                            <i class="Flaticon flaticon-quote"></i>
-                                        </div>
-                                    </div>
-                                    <div class="info">
-                                        <p>"Working in conjunction with humanitarian aid agencies, we have supported
-                                            programmes to help alleviate human suffering through animal welfare when
-                                            people might depend on livestock as their only source of income or food.
-                                        </p>
-                                        <span>- Micky Mouse</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_carousel">
-                        <div class="row">
-                            <div class="col-lg-11">
-                                <div class="single_testmonial d-flex align-items-center">
-                                    <div class="thumb">
-                                        <img src="img/testmonial/author.png" alt="">
-                                        <div class="quote_icon">
-                                            <i class=" Flaticon flaticon-quote"></i>
-                                        </div>
-                                    </div>
-                                    <div class="info">
-                                        <p>"Working in conjunction with humanitarian aid agencies, we have supported
-                                            programmes to help alleviate human suffering through animal welfare when
-                                            people might depend on livestock as their only source of income or food.
-                                        </p>
-                                        <span>- Micky Mouse</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_carousel">
-                        <div class="row">
-                            <div class="col-lg-11">
-                                <div class="single_testmonial d-flex align-items-center">
-                                    <div class="thumb">
-                                        <img src="img/testmonial/author.png" alt="">
-                                        <div class="quote_icon">
-                                            <i class="Flaticon flaticon-quote"></i>
-                                        </div>
-                                    </div>
-                                    <div class="info">
-                                        <p>"Working in conjunction with humanitarian aid agencies, we have supported
-                                            programmes to help alleviate human suffering through animal welfare when
-                                            people might depend on livestock as their only source of income or food.
-                                        </p>
-                                        <span>- Micky Mouse</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-<!-- /testimonial_area  -->
+
 
 {% endblock %}
