--- a/jobo/templates/jobo/job_create.html
+++ b/jobo/templates/jobo/job_create.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="form-group mt-3">
-                <button type="submit" class="button button-contactForm btn_4 boxed-btn">Post Job</button>
+                <button type="submit" class="btn btn-primary w-100">Post Job</button>
             </div>
         </form>
     </div>
