--- a/jobo/templates/jobo/jobdetails.html
+++ b/jobo/templates/jobo/jobdetails.html
@@ -37,19 +37,19 @@
         </div>
         <div class="descript_wrap white-bg">
           <div class="single_wrap">
-            <h4>Job description</h4>
+            <h4>job description</h4>
             <p>{{ job.description }}</p>
           </div>
           <div class="single_wrap">
-            <h4>Responsibility</h4>
+            <h4>responsibility</h4>
             <p>{{  job.experience }}</p>
           </div>
           <div class="single_wrap">
-            <h4>Qualifications</h4>
+            <h4>qualifications</h4>
             <p>{{ job.desired_qualifications }}</p>
           </div>
           <div class="single_wrap">
-            <h4>Benefits</h4>
+            <h4>benefits</h4>
             <p>{{ job.benefits }}</p>
           </div>
         </div>
@@ -57,32 +57,32 @@
       <div class="col-lg-4">
         <div class="job_sumary">
           <div class="summery_header">
-            <h3>Job Summary</h3>
+            <h3>job summary</h3>
           </div>
           <div class="job_content">
             <ul>
-              <li>Published on: <span>{{ job.created }}</span></li>
-              <li>Vacancy: <span>{{ job.vacancy }} Position</span></li>
-              <li>Salary: <span>{{ job.salary_range }}</span></li>
-              <li>Location: <span>{{ job.location }}</span></li>
-              <li>Job Nature: <span>{{ job.job_nature }}</span></li>
+              <li>published on: <span>{{ job.created }}</span></li>
+              <li>vacancy: <span>{{ job.vacancy }} Position</span></li>
+              <li>salary: <span>{{ job.salary_range }}</span></li>
+              <li>location: <span>{{ job.location }}</span></li>
+              <li>job nature: <span>{{ job.job_nature }}</span></li>
             </ul>
           </div>
         </div>
         <div class="share_wrap d-flex">
-          <span>Share at:</span>
+          <span>share at:</span>
           <ul>
             <li>
-              <a href="#"> <i class="fa fa-facebook"></i></a>
+              <a href="#"> <i class="bi bi-facebook"></i></a>
             </li>
             <li>
-              <a href="#"> <i class="fa fa-google-plus"></i></a>
+              <a href="#"> <i class="bi bi-google"></i></a>
             </li>
             <li>
-              <a href="#"> <i class="fa fa-twitter"></i></a>
+              <a href="#"> <i class="bi bi-twitter-x"></i></a>
             </li>
             <li>
-              <a href="#"> <i class="fa fa-envelope"></i></a>
+              <a href="#"> <i class="bi bi-envelope"></i></a>
             </li>
           </ul>
         </div>
