--- a/jobo/templates/jobo/base.html
+++ b/jobo/templates/jobo/base.html
@@ -13,14 +13,22 @@
       href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %} " />
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}" />
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}" />
@@ -36,7 +44,7 @@
 
   <body>
     <!-- header-start -->
-    <header>
+    <header class="mb-3">
       <div class="header-area">
         <div id="sticky-header" class="main-header-area">
           <div class="container-fluid">
@@ -45,7 +53,7 @@
                 <div class="col-xl-3 col-lg-2">
                   <div class="logo">
                     <a href="{% url 'home' %}">
-                      <img src="img/logo.png" alt="" />
+                      jobos
                     </a>
                   </div>
                 </div>
@@ -64,25 +72,29 @@
                   <div class="Appointment">
                     <div class="phone_num d-none d-xl-block">
                       {% if user.is_authenticated %}
-                      <p class="text-success">{{user.username}}</p>
-                      <div class="my-6 hover:text-blue-600">
-                        <a href="{% url 'account_logout' %}" class=""
-                          >Sign Out</a
-                        >
-                      </div>
+                      <p class="text-primary">{{user.username}}</p>
                       {% else %}
                       <a
                         href="{% provider_login_url 'google' %} "
-                        class="btn btn-outline-white"
-                        >Login with Google</a
+                        class="btn btn-primary btn-outline-white"
+                        >login with google</a
                       >
                       {% endif %}
                     </div>
-                    <div class="d-none d-lg-block">
-                      <a class="boxed-btn3" href="{% url 'job_create' %}"
-                        >Post a Job</a
+                    <div class="d-none d-lg-block mx-2">
+                      <a class="btn btn-primary" href="{% url 'job_create' %}"
+                        >post a job</a
                       >
                     </div>
+                    {% if user.is_authenticated %}
+                    <div class="my-6 hover:text-blue-600">
+                      <a
+                        href="{% url 'account_logout' %}"
+                        class="btn btn-primary btn-outline-white"
+                        >sign out</a
+                      >
+                    </div>
+                    {% endif %}
                   </div>
                 </div>
                 <div class="col-12">
@@ -97,21 +109,14 @@
     <!-- header-end -->
     {% block content %} {% endblock %}
     <!-- footer start -->
-    <footer class="footer">
+    <footer class="footer text-black">
       <div class="footer_top">
         <div class="container">
           <div class="row">
             <div class="col-xl-3 col-md-6 col-lg-3">
-              <div
-                class="footer_widget wow fadeInUp"
-                data-wow-duration="1s"
-                data-wow-delay=".3s"
-              >
-                <div class="footer_logo">
-                  <a href="#">
-                    <img src="img/logo.png" alt="" />
-                  </a>
-                </div>
+              <div class="footer_widget">
+                
+                <h3>talk to us</h3>
                 <p>
                   support@jobos.com <br />
                   +254 759 701 314 <br />
@@ -121,22 +126,22 @@
                   <ul>
                     <li>
                       <a href="#">
-                        <i class="ti-facebook"></i>
+                        <i class="bi bi-facebook"></i>
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <i class="fa fa-google-plus"></i>
+                        <i class="bi bi-google"></i>
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <i class="fa fa-twitter"></i>
+                        <i class="bi bi-twitter-x"></i>
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <i class="fa fa-instagram"></i>
+                        <i class="bi bi-instagram"></i>
                       </a>
                     </li>
                   </ul>
@@ -144,27 +149,19 @@
               </div>
             </div>
             <div class="col-xl-2 col-md-6 col-lg-2">
-              <div
-                class="footer_widget wow fadeInUp"
-                data-wow-duration="1.1s"
-                data-wow-delay=".4s"
-              >
-                <h3 class="footer_title">Company</h3>
+              <div class="footer_widget">
+                <h3>company</h3>
                 <ul>
-                  <li><a href="#">About </a></li>
-                  <li><a href="#"> Pricing</a></li>
-                  <li><a href="#">Career Tips</a></li>
+                  <li><a href="#">about </a></li>
+                  <li><a href="#"> pricing</a></li>
+                  <li><a href="#">career tips</a></li>
                   <li><a href="#">FAQ</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-xl-3 col-md-6 col-lg-3">
-              <div
-                class="footer_widget wow fadeInUp"
-                data-wow-duration="1.2s"
-                data-wow-delay=".5s"
-              >
-                <h3 class="footer_title">Category</h3>
+              <div class="footer_widget">
+                <h3>category</h3>
                 <ul>
                   {% for c in categories %}
                   <li><a href="#">{{ c.name }}</a></li>
@@ -173,38 +170,28 @@
               </div>
             </div>
             <div class="col-xl-4 col-md-6 col-lg-4">
-              <div
-                class="footer_widget wow fadeInUp"
-                data-wow-duration="1.3s"
-                data-wow-delay=".6s"
-              >
-                <h3 class="footer_title">Subscribe</h3>
+              <div class="footer_widget">
+                <h3>subscribe</h3>
                 <form
                   action="{% url 'newsletter_create' %}"
                   class="newsletter_form"
                 >
                   <input type="text" placeholder="Enter your mail" />
-                  <button type="submit">Subscribe</button>
+                  <button type="submit" class="btn btn-primary">subscribe</button>
                 </form>
-                <p class="newsletter_text">
-                  Get jobs offers delivered in your mailbox daily.
-                </p>
+                <p class="">get jobs offers delivered in your mailbox daily.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div
-        class="copy-right_text wow fadeInUp"
-        data-wow-duration="1.4s"
-        data-wow-delay=".3s"
-      >
+      <div class="copy-right_text">
         <div class="container">
           <div class="footer_border"></div>
           <div class="row">
             <div class="col-xl-12">
               <p class="copy_right text-center">
-                Copyright &copy;
+                copyright &copy; limitgroup
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
@@ -218,13 +205,22 @@
 
     <!-- link that opens popup -->
     <!-- JS here -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
     <script src="{% static 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-1.12.4.min.js'%}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
-    <script src="{% static 'js/ajax-form.js' %}"></script>
     <script src="{% static 'js/waypoints.min.js' %}"></script>
     <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
     <script src="{% static 'js/imagesloaded.pkgd.min.js' %}"></script>
@@ -242,7 +238,6 @@
     <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
     <script src="{% static 'js/jquery.form.js' %}"></script>
     <script src="{% static 'js/jquery.validate.min.js' %}"></script>
-    <script src="{% static 'js/mail-script.js' %}"></script>
 
     <script src="{% static 'js/main.js' %}"></script>
   </body>
