--- a/jobo/templates/jobo/index.html
+++ b/jobo/templates/jobo/index.html
@@ -8,23 +8,23 @@
     <div class="row cat_search">
       <div class="col-lg-3 col-md-4">
         <div class="single_input">
-          <input type="text" placeholder="Search keyword" />
+          <input type="text" placeholder="search keyword" />
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="single_input">
           <select class="wide">
-            <option data-display="Location">Location</option>
-            <option value="1">Nairobi</option>
-            <option value="2">Kisumu</option>
-            <option value="4">Nakuru</option>
+            <option data-display="location">location</option>
+            <option value="1">nairobi</option>
+            <option value="2">kisumu</option>
+            <option value="4">nakuru</option>
           </select>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="single_input">
           <select class="wide">
-            <option data-display="Category">Category</option>
+            <option data-display="category">category</option>
             {% for c in categories %}
             <option value="{{ c.id }}">{{ c.name }}</option>
             {% endfor %}
@@ -33,22 +33,22 @@
       </div>
       <div class="col-lg-3 col-md-12">
         <div class="job_btn">
-          <a href="#" class="boxed-btn3">Find Job</a>
+          <a href="#" class="btn btn-primary">find job</a>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-12">
         <div class="popular_search d-flex align-items-center">
-          <span>Popular Search:</span>
+          <span>popular search:</span>
           <ul>
-            <li><a href="#">Design & Creative</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Administration</a></li>
-            <li><a href="#">Teaching & Education</a></li>
-            <li><a href="#">Engineering</a></li>
-            <li><a href="#">Software & Web</a></li>
-            <li><a href="#">Telemarketing</a></li>
+            <li><a href="#">design & creative</a></li>
+            <li><a href="#">marketing</a></li>
+            <li><a href="#">administration</a></li>
+            <li><a href="#">teaching & education</a></li>
+            <li><a href="#">engineering</a></li>
+            <li><a href="#">software & web</a></li>
+            <li><a href="#">telemarketing</a></li>
           </ul>
         </div>
       </div>
@@ -81,20 +81,18 @@
     </div>
   </div>
 </div> {% endcomment %}
-A
-
 <!-- job_listing_area_start  -->
 <div class="job_listing_area p-5">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6">
         <div class="section_title">
-          <h3>Job Listing</h3>
+          <h3>job listing</h3>
         </div>
       </div>
       <div class="col-lg-6">
         <div class="brouse_job text-right">
-          <a href="{% url 'jobs' %}" class="btn  btn-PRIMAR">Browse More Job</a>
+          <a href="{% url 'jobs' %}" class="btn  btn-primary">browse more jobs</a>
         </div>
       </div>
     </div>
@@ -121,7 +119,7 @@ A
             <div class="jobs_right">
               <div class="apply_now">
                 <a class="heart_mark" href="#"> <i class="ti-heart"></i> </a>
-                <a href="{% url 'jobdetail' %}" class="boxed-btn3">Apply Now</a>
+                <a href="{% url 'jobdetail' %}" class="boxed-btn3">apply now</a>
               </div>
               <div class="date">
                 <p>{{ j.deadline }}</p>
@@ -206,24 +204,21 @@ A
   <div class="container">
     <div class="row">
       <div class="col-lg-5 offset-lg-1 col-md-6">
-        <div class="searching_text">
-          <h3>Looking for a Job?</h3>
-          <p>Start your ultimate job search today.</p>
-          <a href="{% url 'jobs' %}" class="boxed-btn3">Browse Job</a>
+        <div class="">
+          <h3>looking for a job?</h3>
+          <p>start your ultimate job search today.</p>
+          <a href="{% url 'jobs' %}" class="btn btn-primary">browse jobs</a>
         </div>
       </div>
       <div class="col-lg-5 offset-lg-1 col-md-6">
-        <div class="searching_text">
-          <h3>Looking for a Expert?</h3>
-          <p>List a job to get candidates fast.</p>
-          <a href="{% url 'job_create' %}" class="boxed-btn3">Post a Job</a>
+        <div class="">
+          <h3>looking for an expert?</h3>
+          <p>list a job to get candidates fast.</p>
+          <a href="{% url 'job_create' %}" class="btn btn-primary">post a job</a>
         </div>
       </div>
     </div>
   </div>
 </div>
 <!-- job_searcing_wrap end  -->
-
-
-
 {% endblock %}
