--- a/jobo/templates/jobo/jobs.html
+++ b/jobo/templates/jobo/jobs.html
@@ -8,7 +8,7 @@
       <div class="col-lg-3">
         <div class="job_filter white-bg">
           <div class="form_inner white-bg">
-            <h3>Filter</h3>
+            <h3>filter</h3>
             <form action="#">
               <div class="row">
                 <div class="col-lg-12">
@@ -19,16 +19,16 @@
                 <div class="col-lg-12">
                   <div class="single_field">
                     <select class="wide">
-                      <option data-display="Location">Location</option>
-                      <option value="1">Rangpur</option>
-                      <option value="2">Dhaka</option>
+                      <option data-display="Location">location</option>
+                      <option value="1">nairobi</option>
+                      <option value="2">nakuru</option>
                     </select>
                   </div>
                 </div>
                 <div class="col-lg-12">
                   <div class="single_field">
                     <select class="wide">
-                      <option data-display="Category">Category</option>
+                      <option data-display="Category">category</option>
                       {% for c in categories %}
 
                       <option value="{{ c.id }}">{{ c.name }}</option>
@@ -39,14 +39,14 @@
                 <div class="col-lg-12">
                   <div class="single_field">
                     <select class="wide">
-                      <option data-display="Experience">Experience</option>
+                      <option data-display="Experience">experience</option>
                     </select>
                   </div>
                 </div>
                 <div class="col-lg-12">
                   <div class="single_field">
                     <select class="wide">
-                      <option data-display="Job type">Job type</option>
+                      <option data-display="Job type">job type</option>
                     </select>
                   </div>
                 </div>
@@ -54,7 +54,7 @@
                   <div class="single_field">
                     <select class="wide">
                       <option data-display="Qualification">
-                        Qualification
+                        qualification
                       </option>
                       <option value="1">Qualification 1</option>
                       <option value="2">Qualification 2</option>
@@ -64,7 +64,7 @@
                 <div class="col-lg-12">
                   <div class="single_field">
                     <select class="wide">
-                      <option data-display="Gender">Gender</option>
+                      <option data-display="Gender">gender</option>
                       <option value="1">male</option>
                       <option value="2">female</option>
                     </select>
@@ -74,7 +74,7 @@
             </form>
           </div>
           <div class="range_wrap">
-            <label for="amount">Price range:</label>
+            <label for="amount">price range:</label>
             <div id="slider-range"></div>
             <p>
               <input
@@ -91,7 +91,7 @@
             </p>
           </div>
           <div class="reset_btn">
-            <button class="boxed-btn3 w-100" type="submit">Reset</button>
+            <button class="btn btn-primary w-100" type="submit">reset</button>
           </div>
         </div>
       </div>
@@ -100,12 +100,12 @@
           <div class="recent_joblist white-bg">
             <div class="row align-items-center">
               <div class="col-md-6">
-                <h4>Job Listing</h4>
+                <h4>job listing</h4>
               </div>
               <div class="col-md-6">
                 <div class="serch_cat d-flex justify-content-end">
                   <select>
-                    <option data-display="Most Recent">Most Recent</option>
+                    <option data-display="Most Recent">most recent</option>
                   </select>
                 </div>
               </div>
@@ -125,10 +125,10 @@
                     </a>
                     <div class="links_locat d-flex align-items-center">
                       <div class="location">
-                        <p><i class="fa fa-map-marker"></i> {{ j.location }}</p>
+                        <p><i class="bi bi-map-marker"></i> {{ j.location }}</p>
                       </div>
                       <div class="location">
-                        <p><i class="fa fa-clock-o"></i>{{ j.job_type }}</p>
+                        <p><i class="bi bi-clock-o"></i>{{ j.job_type }}</p>
                       </div>
                     </div>
                   </div>
@@ -136,14 +136,14 @@
                 <div class="jobs_right">
                   <div class="apply_now">
                     <a class="heart_mark" href="#">
-                      <i class="fa fa-heart"></i>
+                      <i class="bi bi-heart"></i>
                     </a>
-                    <a href="{% url 'jobdetail' %}" class="boxed-btn3"
-                      >Apply Now</a
+                    <a href="{% url 'jobdetail' %}" class="btn btn-prmary"
+                      >apply now</a
                     >
                   </div>
                   <div class="date">
-                    <p>Deadline : {{ j.deadline }}</p>
+                    <p>deadline : {{ j.deadline }}</p>
                   </div>
                 </div>
               </div>
