--- a/jobo/templates/jobo/base.html
+++ b/jobo/templates/jobo/base.html
@@ -25,21 +25,13 @@
     />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
-    <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}" />
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %} " />
-    <link rel="stylesheet" href="{% static 'css/flaticon.css' %}" />
     <link rel="stylesheet" href="{% static 'css/gijgo.css' %}" />
-    <link rel=" stylesheet" href="{% static 'css/animate.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/slicknav.css' %}" />
-
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/responsive.css' %}" />
   </head>
 
   <body>
@@ -52,9 +44,7 @@
               <div class="row align-items-center">
                 <div class="col-xl-3 col-lg-2">
                   <div class="logo">
-                    <a href="{% url 'home' %}">
-                      jobos
-                    </a>
+                    <a href="{% url 'home' %}"> jobos </a>
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-7">
@@ -115,7 +105,6 @@
           <div class="row">
             <div class="col-xl-3 col-md-6 col-lg-3">
               <div class="footer_widget">
-                
                 <h3>talk to us</h3>
                 <p>
                   support@jobos.com <br />
@@ -177,7 +166,9 @@
                   class="newsletter_form"
                 >
                   <input type="text" placeholder="Enter your mail" />
-                  <button type="submit" class="btn btn-primary">subscribe</button>
+                  <button type="submit" class="btn btn-primary">
+                    subscribe
+                  </button>
                 </form>
                 <p class="">get jobs offers delivered in your mailbox daily.</p>
               </div>
@@ -202,8 +193,6 @@
       </div>
     </footer>
     <!--/ footer end  -->
-
-    <!-- link that opens popup -->
     <!-- JS here -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -215,30 +204,13 @@
       integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
       crossorigin="anonymous"
     ></script>
-    <script src="{% static 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
-    <script src="{% static 'js/vendor/jquery-1.12.4.min.js'%}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
     <script src="{% static 'js/waypoints.min.js' %}"></script>
-    <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
-    <script src="{% static 'js/imagesloaded.pkgd.min.js' %}"></script>
-    <script src="{% static 'js/scrollIt.js' %}"></script>
-    <script src="{% static 'js/jquery.scrollUp.min.js' %}"></script>
-    <script src="{% static 'js/wow.min.js' %}"></script>
     <script src="{% static 'js/nice-select.min.js' %}"></script>
     <script src="{% static 'js/jquery.slicknav.min.js' %}"></script>
     <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static 'js/plugins.js' %}"></script>
     <script src="{% static 'js/gijgo.min.js' %}"></script>
-
-    <!--contact js-->
-    <script src="{% static 'js/contact.js' %}"></script>
-    <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
-    <script src="{% static 'js/jquery.form.js' %}"></script>
-    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
-
     <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
