--- a/jobo/templates/jobo/contact.html
+++ b/jobo/templates/jobo/contact.html
@@ -97,7 +97,7 @@
         <div class="media contact-info">
           <span class="contact-info__icon"><i class="bi bi-email"></i></span>
           <div class="media-body">
-            <h3>support@jobos.com</h3>
+            <h3>support@wera.com</h3>
             <p>send us your query anytime!</p>
           </div>
         </div>
