--- a/jobo/static/css/style.css
+++ b/jobo/static/css/style.css
@@ -32,33 +32,10 @@ body {
 }
 
 
-.img {
-  max-width: 100%;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-}
 
 
-a,
-.button {
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-}
-
-
-a:focus,
-.button:focus, button:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-
-a:focus {
-  text-decoration: none;
+a {
+  text-decoration: none !important;
 }
 
 
@@ -70,27 +47,8 @@ a:hover,
 }
 
 
-a,
-button {
-  color: #1F1F1F;
-  outline: medium none;
-}
 
 
-h1, h2, h3, h4, h5 {
- 
-  color: #191d34;
-}
-
-
-h1 a,
-h2 a,
-h3 a,
-h4 a,
-h5 a,
-h6 a {
-  color: inherit;
-}
 
 ul {
   margin: 0px;
@@ -642,102 +600,8 @@ h3 {
   margin-bottom: 90px;
 }
 
-@media (max-width: 767px) {
-  /* line 57, ../../Arafath/CL/December/235. Job board/HTML/scss/_section_title.scss */
-  .mb-90 {
-    margin-bottom: 40px;
-  }
-}
 
-@media (min-width: 768px) and (max-width: 991px) {
-  /* line 57, ../../Arafath/CL/December/235. Job board/HTML/scss/_section_title.scss */
-  .mb-90 {
-    margin-bottom: 60px;
-  }
-}
 
-/* line 67, ../../Arafath/CL/December/235. Job board/HTML/scss/_section_title.scss */
-.pl-68 {
-  padding-left: 68px;
-}
-
-@media (max-width: 767px) {
-  /* line 67, ../../Arafath/CL/December/235. Job board/HTML/scss/_section_title.scss */
-  .pl-68 {
-    padding-left: 0;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  /* line 67, ../../Arafath/CL/December/235. Job board/HTML/scss/_section_title.scss */
-  .pl-68 {
-    padding-left: 0;
-  }
-}
-
-/* line 76, ../../Arafath/CL/December/235. Job board/HTML/scss/_section_title.scss */
-.mb-40 {
-  margin-bottom: 39px;
-}
-
-@media (max-width: 767px) {
-  /* line 76, ../../Arafath/CL/December/235. Job board/HTML/scss/_section_title.scss */
-  .mb-40 {
-    margin-bottom: 20px;
-  }
-}
-
-@media (max-width: 767px) {
-  /* line 4, ../../Arafath/CL/December/235. Job board/HTML/scss/_slick-nav.scss */
-  .mobile_menu {
-    position: absolute;
-    right: 0px;
-    width: 100%;
-    z-index: 9;
-  }
-}
-
-/* line 13, ../../Arafath/CL/December/235. Job board/HTML/scss/_slick-nav.scss */
-.slicknav_menu .slicknav_nav {
-  background: #fff;
-  float: right;
-  margin-top: 0;
-  padding: 0;
-  width: 95%;
-  padding: 0;
-  border-radius: 0px;
-  margin-top: 5px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 11px;
-}
-
-/* line 28, ../../Arafath/CL/December/235. Job board/HTML/scss/_slick-nav.scss */
-.slicknav_menu .slicknav_nav a:hover {
-  background: transparent;
-  color: #F91842;
-}
-
-/* line 32, ../../Arafath/CL/December/235. Job board/HTML/scss/_slick-nav.scss */
-.slicknav_menu .slicknav_nav a.active {
-  color: #F91842;
-}
-
-@media (max-width: 767px) {
-  /* line 35, ../../Arafath/CL/December/235. Job board/HTML/scss/_slick-nav.scss */
-  .slicknav_menu .slicknav_nav a i {
-    display: none;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  /* line 35, ../../Arafath/CL/December/235. Job board/HTML/scss/_slick-nav.scss */
-  .slicknav_menu .slicknav_nav a i {
-    display: none;
-  }
-}
 
 /* line 44, ../../Arafath/CL/December/235. Job board/HTML/scss/_slick-nav.scss */
 .slicknav_menu .slicknav_nav .slicknav_btn {
@@ -1661,83 +1525,6 @@ h3 {
   }
 }
 
-/* line 13, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .single_testmonial .thumb {
-  position: relative;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  width: 228px;
-  height: 228px;
-}
-
-/* line 18, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .single_testmonial .thumb img {
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
-
-/* line 21, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .single_testmonial .thumb .quote_icon {
-  position: absolute;
-  width: 58px;
-  height: 58px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  color: #fff;
-  text-align: center;
-  line-height: 58px;
-  right: 0;
-  bottom: 0;
-}
-
-
-
-/* line 47, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .single_testmonial .info span {
-  color: #7A838B;
-  font-size: 16px;
-  font-weight: 400;
-  display: block;
-}
-
-/* line 55, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .owl-carousel .owl-item img {
-  display: inline-block;
-  width: auto;
-}
-
-/* line 61, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .owl-carousel .owl-nav div {
-  font-size: 15px;
-  line-height: 50px;
-  border: 0;
-  left: auto;
-  background: #E6F3FF;
-  color: #0A8CFF;
-  right: 0;
-  left: auto;
-  line-height: 51px;
-}
-
-/* line 71, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .owl-carousel .owl-nav div:hover {
-  border: none;
-  background: #7FC1FC;
-  color: #fff;
-}
-
-/* line 76, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .owl-carousel .owl-nav div.owl-next {
-  margin-top: -30px;
-}
-
-/* line 79, ../../Arafath/CL/December/235. Job board/HTML/scss/_testmonial.scss */
-.testimonial_area .owl-carousel .owl-nav div.owl-prev {
-  margin-top: 30px;
-}
 
 /* line 2, ../../Arafath/CL/December/235. Job board/HTML/scss/_accordion.scss */
 #accordion button {
